# dvlife-collector

./: .flake8  .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: python-package.yml
dvlife_collector/: main_divunit.py  main_position.py  main_valuation.py
dvlife_collector/application/: divunit_collect_usecase.py  position_collect_usecase.py  valuation_collect_usecase.py
dvlife_collector/application/position/: collect_usecase.py
dvlife_collector/config/: logging.yaml
dvlife_collector/constant/: bank.py  constants.py  site_kind.py
dvlife_collector/domain/model/: annual_dividend.py  divunit.py  divunit_target.py  position.py  position_by_bank.py  ticker.py  valuation.py  valuation_in.py
dvlife_collector/domain/service/: divunit_service.py  position_service.py  valuation_service.py
dvlife_collector/exception/: webload_exception.py
dvlife_collector/infrastructure/: credential.py  divunit_repository.py  position_repository.py  valuation_repository.py
dvlife_collector/infrastructure/divunit/page/: jp_etf_page.py  jp_normal_page.py  page_base.py  us_etf_page.py  us_normal_page.py
dvlife_collector/infrastructure/page/: neomobi_page.py  page_base.py  rakuten_page.py  sbi_page.py
dvlife_collector/infrastructure/position/file/: file_base.py
dvlife_collector/infrastructure/position/page/: neomobi_page.py  page_base.py  rakuten_page.py  sbi_page.py
dvlife_collector/infrastructure/valuation/: source_page.py  valuation_gs.py
environment/local/: dotenv  gspread_client_secret.json
tests/: test_sample.py
tests/domain/model/: test_position.py
