[tool.poetry]
name = "dvlife-collector"
version = "0.1.0"
description = ""
authors = ["tefuna <tefuna@gmail.com>"]
readme = "README.md"
packages = [{ include = "dvlife_collector" }]

[tool.poetry.dependencies]
python = "^3.11.2"
pyyaml = "^6.0"
numpy = "^1.25.1"
selenium = "^4.10.0"
beautifulsoup4 = "^4.12.2"
python-dotenv = "^1.0.0"
pandas = "^2.0.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
sphinx = "^7.2.6"
taskipy = "^1.12.2"

[tool.ruff]
line-length = 119

[tool.ruff.lint]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[tool.pytest.ini_options]
pythonpath = "dvlife_collector"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
position = "python dvlife_collector/main_position.py"
divunit = "python dvlife_collector/main_divunit.py"
test = "poetry run pytest -v"
check = "poetry run ruff check ."
format = "poetry run ruff format ."
