[tool.poetry]
name = "dvlife-collector"
version = "0.1.0"
description = ""
authors = ["tefuna <tefuna@gmail.com>"]
readme = "README.md"
packages = [{ include = "dvlife_collector" }]

[tool.poetry.dependencies]
python = "^3.11.2"
pyyaml = "^6.0"
numpy = "^1.25.1"
selenium = "^4.10.0"
beautifulsoup4 = "^4.12.2"
python-dotenv = "^1.0.0"
pandas = "^2.0.3"
gspread = "^6.1.2"
retry = "^0.9.2"
types-retry = "^0.9.9.4"
lxml = "^5.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
sphinx = "^7.2.6"
taskipy = "^1.12.2"
mypy = "^1.8.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[tool.mypy]
strict_optional = true
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
# mypy エラーに該当しない箇所に # type: ignore コメントが付与されていたら警告
# # type: ignore が付与されている箇所はエラーを無視
warn_unused_ignores = true

[tool.pytest.ini_options]
pythonpath = "dvlife_collector"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
position = "python dvlife_collector/main_position.py"
divunit = "python dvlife_collector/main_divunit.py"
valuation = "python dvlife_collector/main_valuation.py"
test = "poetry run pytest -v -s"
check = "poetry run ruff check ."
format = "poetry run ruff format ."
mypy = "poetry run mypy dvlife_collector tests"
